feat: boards container

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   background: #74a2e1;
   box-shadow: 1px 0 10px 0px rgba(0, 0, 0, .8);
 }
