--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,7 +10,6 @@
 
 .modal {
   position: relative;
-  max-width: 600px;
   width: 100%;
   margin: auto;
   border-radius: 6px;
@@ -18,39 +17,8 @@
   padding: 15px;
   box-shadow: 0 0 15px 2px rgba(0, 0, 0, .6);
   animation: modal-open .1s linear;
-}
-
-.close {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: flex;
-  background: transparent;
-  border: none;
-  outline: none;
-}
-
-.closeLine {
-  position: relative;
-  margin: auto;
-  width: 25px;
-  height: 2px;
-  background: gray;
-  transform: rotate(45deg);
-  border-radius: 4px;
-  &::after {
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    width: inherit;
-    height: inherit;
-    background: inherit;
-    border-radius: inherit;
-    transform: rotate(90deg);
+  &.sm {
+    max-width: 400px;
   }
 }
 
@@ -58,7 +26,6 @@
   font-size: 22px;
   margin-bottom: 40px;
   text-align: center;
-  padding: 0 40px;
   text-transform: uppercase;
   font-weight: 600;
 }
