--- a/src/components/BoardLink/BoardLink.module.scss
+++ b/src/components/BoardLink/BoardLink.module.scss
@@ -1,16 +1,21 @@
 .link {
   width: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
   background: #9fe7a4;
   text-decoration: none;
   border-radius: 4px;
-  padding: 20px 10px;
+  padding: 20px 10px 10px 10px;
   transition: box-shadow 0.1s linear;
   &:hover {
     box-shadow: 4px 8px 13px -5px rgba(0, 0, 0, 0.8);
   }
   &:active {
     box-shadow: 0px 2px 13px -5px rgba(0, 0, 0, 0.8);
+  }
+  &:hover .btnsWrap {
+    opacity: 1;
+    pointer-events: all;
   }
 }
 
@@ -26,4 +31,24 @@
   text-align: right;
   font-size: 14px;
   color: #fff;
+}
+
+.btnsWrap {
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.btnCol {
+  width: 80px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
+.footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
