--- a/src/containers/Board/Board.module.scss
+++ b/src/containers/Board/Board.module.scss
@@ -12,9 +12,45 @@
 
 .content {
   display: flex;
+  margin: 0 -10px;
 }
 
 .contentItem {
   width: 100%;
   max-width: 300px;
+  padding: 0 10px;
+}
+
+.colItem {
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, .6);
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.colTitle {
+  font-size: 20px;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #000;
+}
+
+.colText {
+  box-shadow: 0 3px 3px 3px rgba(0, 0, 0, .2);
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+  margin-top: 10px;
+  padding: 10px 5px;
+  font-size: 16px;
+}
+
+.addTask {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.addBtnWrap {
+  width: 70px;
+  padding-left: 15px;
 }
