--- a/src/containers/Board/Board.module.scss
+++ b/src/containers/Board/Board.module.scss
@@ -2,6 +2,7 @@
   padding: 100px 20px 0 20px;
   min-height: 100vh;
   background: #e9e9e9;
+  overflow-x: auto;
 }
 
 .pageTitle {
@@ -13,4 +14,11 @@
 .content {
   display: flex;
   margin: 0 -10px;
+}
+
+.contentItem {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 300px;
+  padding: 0 10px;
 }
