--- a/src/containers/BoardCol/BoardCol.module.scss
+++ b/src/containers/BoardCol/BoardCol.module.scss
@@ -20,7 +20,7 @@
 }
 
 .colText {
-  box-shadow: 0 3px 3px 3px rgba(0, 0, 0, .2);
+  cursor: pointer;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
   margin-top: 10px;
